# CarbonX

./: README.md
refi-contract/: Anchor.toml  package.json
refi-contract/programs/refi-contract/: Cargo.toml
refi-contract/programs/refi-contract/src/: lib.rs
refi-contract/programs/refi-contract/src/context/: init_carbon_credit.rs
refi-contract/programs/refi-contract/src/state/: mod.rs
refi-contract/tests/: refi-contract.ts
refi-frontend/: .env  .env.local  next.config.ts  package-lock.json  package.json
refi-frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
refi-frontend/.next/cache/: .rscinfo  .tsbuildinfo
refi-frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
refi-frontend/.next/server/app/: Landing.html  Landing.rsc  _not-found.html  _not-found.rsc  index.html  index.rsc  marketplace.html  marketplace.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  register.html  register.rsc
refi-frontend/.next/server/chunks/: 445.js  619.js  855.js  901.js
refi-frontend/.next/server/pages/: 500.html
refi-frontend/.next/server/vendor-chunks/: @ethersproject.js  @google.js  bl.js  (+140 more)
refi-frontend/src/app/: globals.css  layout.tsx  page.tsx
(+891 files in other folders)
